# TSS-System

./: .gitignore  README.md  main.py
tts-paper-test/: .env.example  .gitignore  README.md  STRUCTURE.md  changelog.md  main.py  package.json  pyproject.toml  requirements.txt  start.sh  tailwind.config.js
tts-paper-test/agents/: __init__.py  analyzer.py  executor.py  generator.py  planner.py  reviewer.py  skills_integration.py
tts-paper-test/agents/config/: analyzer.jsonc  executor.jsonc  generator.jsonc  planner.jsonc  reviewer.jsonc
tts-paper-test/agents/crews/: __init__.py  analysis_crew.py  test_execution_crew.py  test_generation_crew.py
tts-paper-test/agents/flows/: __init__.py  test_flow.py
tts-paper-test/agents/tools/: __init__.py  (+4 more)
tts-paper-test/backend/: .env.example  app.py  config.py  database.py  main.py  package-lock.json  package.json  requirements-ai.txt  requirements-prod.txt  requirements.txt  security.py
tts-paper-test/core/: __init__.py  config.py  exceptions.py  models.py
tts-paper-test/docs/: AI测试平台-模块.md  ARCHITECTURE.md  MODULE-ANALYSIS.md  PROJECT_SUMMARY.md  README.md  STARTUP-GUIDE.md  TEST-MODULE-OPTIMIZATION.md  USER_GUIDE.md  frontend-design-spec.md
tts-paper-test/frontend/: .npmrc  DESIGN_NOTES.md  index.html  package-lock.json  package.json  tsconfig.app.json  tsconfig.json  tsconfig.tsbuildinfo  vite.config.ts
tts-paper-test/knowledge/: README.md  __init__.py  vector_store.py
tts-paper-test/prompts/: __init__.py  bug_analysis.py  report_summary.py  test_generation.py  test_review.py
tts-paper-test/reports/: test_report.html
tts-paper-test/scripts/: init_db.py  init_knowledge.py  run_agents.py  setup_knowledge.py  test_knowledge.py  test_workflow.py  verify_simple.py  verify_skills.py
tts-paper-test/tests/: __init__.py  conftest.py
tts-paper-test/web/: app.py  cache.py  captcha.py  database.py  rate_limit.py
(+295 files in other folders)
